adds script tag link to config file

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
       defer
     ></script>
     <link rel="stylesheet" href="static/style.css" />
+    <script src="/js/config.js" defer></script>
     <script src="/js/Alert.js" defer></script>
     <script src="/js/Weather.js" defer></script>
     <script src="/js/app.js" defer></script>
