adds mt-auto to zip form-control

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
       <h2 class="display-6 text-center mb-3" id="console-header">Admin Console</h2>
       <div class="row w-100">
 
-        <div class="col-6">
+        <div class="col-6 mt-auto">
           <label for="ugc">ZIP Code</label>
           <input type="text" class="form-control" id="zip" placeholder="enter zip code" />
         </div> <!-- end col -->
