adds link to settings

--- a/index.html
+++ b/index.html
@@ -101,5 +101,8 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
     </div> <!-- end row -->
 
     <div id="alert-modal"></div>
+    <div id="settings-link" class="d-flex justify-content-center">
+        <a href="config.js">Configure Settings</a>
+    </div>
   </body>
 </html>
