adds link to settings

--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
           <div class="card mt-2 bg-light" id="filler" style="width: 18rem;">
             <img src="/static/images/a01d.png" class="card-img-top" alt="">
             <div class="card-body">
-              <h5 class="card-title">${this._city}, ${this._state}</h5>
-              <p class="card-text">${this._temperature}°F - ${this._humidity}% humidity</p>
-              <p class="card-text">${this._description}</p>
+
             </div> <!-- end card-body -->
           </div> <!-- end card -->
         </div> <!-- end container -->
@@ -102,7 +100,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
 
     <div id="alert-modal"></div>
     <div id="settings-link" class="d-flex justify-content-center">
-        <a href="config.js">Configure Settings</a>
+        <a href="../settings.html">Configure Settings</a>
     </div>
   </body>
 </html>
