switches light input id

--- a/settings.html
+++ b/settings.html
@@ -81,8 +81,8 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
 
         <div class="row mt-3">
           <div class="offset-4 col-4" title="The color LEDs will flash for alerts">
-            <label for="severity" >LED Alert Light Color<span class="fw-light">(Optional)</span> </label>
-            <select class="form-control" id="severity" name="severity">
+            <label for="light-color" >LED Alert Light Color<span class="fw-light">(Optional)</span> </label>
+            <select class="form-control" id="light-color" name="light-color">
               <option value="" selected disabled></option>
               <option value="red">Red</option>
               <option value="yellow">Yellow</option>
