adds div for submission confirmation output msg

--- a/settings.html
+++ b/settings.html
@@ -102,6 +102,8 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
         </div>
       </div> <!-- end admin console -->
 
+      <div class="row mt-3" id="confirmation"></div>
+
     <div id="settings-link" class="d-flex justify-content-center">
       <a href="../index.html">Home</a>
     </div>
