--- a/index.html
+++ b/index.html
@@ -72,10 +72,8 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
 
     <div class="row">
 
-      <div class="col-12 col-sm-6 mt-4">
-        <h2 class="display-5 text-center small" id="weather-header">Weather</h2>
+      <div class="col-12 col-sm-6 mt-4" id="weather-output">
         <div class="container d-flex align-items-center justify-content-center flex-column">
-          <div id="weather-output"></div>
           <div class="card mt-2 bg-light" id="filler" style="width: 18rem;">
             <img src="/static/images/a01d.png" class="card-img-top" alt="">
             <div class="card-body">
@@ -84,10 +82,8 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
         </div> <!-- end container -->
       </div> <!-- end col-12 -->
 
-      <div class="col-12 col-sm-6 mt-4">
-        <h2 class="display-5 text-center small" id="alert-header">Alerts</h2>
+      <div class="col-12 col-sm-6 mt-4" id="alert-output">
         <div class="container d-flex align-items-center justify-content-center flex-column">
-          <div id="alert-output"></div>
         </div> <!-- end container d-flex... -->
       </div> <!-- end col-12 -->
     </div> <!-- end row -->
