moves ui methods into own class

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
     <script src="/js/app.js" defer></script>
     <script src="/js/util.js" defer></script>
     <script src="/js/icons.js" defer></script>
+    <script src="/js/UI.js" defer></script>
     <script src="/js/PostRequest.js" defer></script>
     <title>ISWAM | IoT Severe Weather Alert Monitor</title>
   </head>
