adds favicon and link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
       defer
     ></script>
     <link rel="stylesheet" href="static/style.css" />
-
+    <link rel="icon" href="/thunderstorm.png">
     <script src="/js/app.js" defer></script>
     <script src="/js/config.js" defer></script>
     <script src="/js/Alert.js" defer></script>
