fixes path to alert icon

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
     <script src="../client/js/ui.js" defer></script>
     <script src="../client/js/util.js" defer></script>
     <script src="../client/js/script.js" defer></script>
+    <!-- <script src="../client/js/client_test.js" defer></script> -->
     <title>ISWAM | IoT Severe Weather Alert Monitor</title>
   </head>
   <body>    
