updates nav links

--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
     </div> <!-- end row -->
 
     <div id="settings-link" class="d-flex justify-content-center">
-        <a href="../settings.html">Configure Settings</a>
+        <a href="settings.html">Configure Settings</a>
     </div>
   </body>
 </html>
