--- a/client/settings.html
+++ b/client/settings.html
@@ -71,7 +71,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
       <div class="row mt-3" id="confirmation"></div>
 
     <div id="settings-link" class="d-flex justify-content-center">
-      <a href="../index.html">Home</a>
+      <a href="index.html">Home</a>
     </div>
 
   </body>
