--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
     <!-- bootstrap js bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="/thunderstorm.png">
+    <link rel="icon" href="images/thunderstorm.png">
     <script src="../client/js/ui.js" defer></script>
     <script src="../client/js/util.js" defer></script>
     <script src="../client/js/script.js" defer></script>
