adds dropdown option for all levels

--- a/client/settings.html
+++ b/client/settings.html
@@ -39,7 +39,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
           <div class="offset-3 col-6" title="The minimum severity level for which you would like to receive alerts">
             <label for="severity" >Minimum Severity <span class="fw-light">(Optional)</span> </label>
             <select class="form-control" id="severity" name="severity">
-              <option value="" selected disabled></option>
+              <option value="1" selected>All (default) </option>
               <option value="1">Watch</option>
               <option value="2">Advisory</option>
               <option value="3">Warning</option>
