--- a/client/settings.html
+++ b/client/settings.html
@@ -50,9 +50,9 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
         <div class="row mt-3">
           <div class="offset-3 col-6" title="The color LEDs will flash for alerts">
             <label for="light-color" >LED Alert Light Color<span class="fw-light">(Optional)</span> </label>
-            <select class="form-control" id="light-color" name="light-color">
-              <option value="" selected disabled></option>
-              <option value="red">Red</option>
+            <select onchange=" this.dataset.chosen=this.value; " class="form-control" id="light-color" name="light-color">
+              <option value="white" selected>White (default)</option>
+              <option value="red" selected>Red</option>
               <option value="yellow">Yellow</option>
               <option value="green">Green</option>
               <option value="blue">Blue</option>
