--- a/client/settings.html
+++ b/client/settings.html
@@ -52,7 +52,7 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
             <label for="light-color" >LED Alert Light Color<span class="fw-light">(Optional)</span> </label>
             <select onchange=" this.dataset.chosen=this.value; " class="form-control" id="light-color" name="light-color">
               <option value="white" selected>White (default)</option>
-              <option value="red" selected>Red</option>
+              <option value="red">Red</option>
               <option value="yellow">Yellow</option>
               <option value="green">Green</option>
               <option value="blue">Blue</option>
