changes dropdown color values to hex

--- a/client/settings.html
+++ b/client/settings.html
@@ -51,14 +51,14 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
           <div class="offset-3 col-6" title="The color LEDs will flash for alerts">
             <label for="light-color" >LED Alert Light Color<span class="fw-light">(Optional)</span> </label>
             <select onchange=" this.dataset.chosen=this.value; " class="form-control" id="light-color" name="light-color">
-              <option value="white" selected>White (default)</option>
-              <option value="red">Red</option>
-              <option value="yellow">Yellow</option>
-              <option value="green">Green</option>
-              <option value="blue">Blue</option>
-              <option value="orange">Orange</option>
-              <option value="purple">Purple</option>
-              <option value="pink">Pink</option>
+              <option value="FFFFFF" selected>White (default)</option>
+              <option value="FF0000">Red</option>
+              <option value="FFFF00">Yellow</option>
+              <option value="00FF00">Green</option>
+              <option value="0000FF">Blue</option>
+              <option value="FF9933">Orange</option>
+              <option value="80080">Purple</option>
+              <option value="FF00FF">Pink</option>
             </select>
           </div> <!-- end col -->
         </div> <!-- end row -->
