--- a/client/settings.html
+++ b/client/settings.html
@@ -61,9 +61,25 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
           </div> <!-- end col -->
         </div> <!-- end row -->
 
+        <div class="row my-3">
+          <div class="offset-3 col-2">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="interval" id="interval" value="false" checked>
+              <label class="form-check-label" for="flexRadioDefault1">Check Once</label>
+            </div>
+          </div>  
+          
+          <div class="offset-1 col-3">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="interval" id="interval" value="true">
+              <label class="form-check-label" for="flexRadioDefault2">Check Continuously</label>
+            </div>
+          </div>
+        </div>
+
         <div class="row"> 
           <div class="col">
-            <button class="btn btn-primary mt-3" id="save">Save</button>
+            <button class="btn btn-primary mt-3" id="save">Save Preferences</button>
           </div> <!-- end col -->
         </div>
       </div> <!-- end admin console -->
