--- a/client/settings.html
+++ b/client/settings.html
@@ -64,15 +64,15 @@ Date: 11/22/2021         "") `"` DC  \  ((`"`
         <div class="row my-3">
           <div class="offset-3 col-2">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="interval" id="interval" value="false" checked>
-              <label class="form-check-label" for="flexRadioDefault1">Check Once</label>
+              <input class="form-check-input" type="radio" name="interval" id="interval-false" value="false" checked>
+              <label class="form-check-label" for="interval">Check Once</label>
             </div>
           </div>  
           
           <div class="offset-1 col-3">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="interval" id="interval" value="true">
-              <label class="form-check-label" for="flexRadioDefault2">Check Continuously</label>
+              <input class="form-check-input" type="radio" name="interval" id="interval-true" value="true">
+              <label class="form-check-label" for="interval">Check Continuously</label>
             </div>
           </div>
         </div>
